2010-02-04  Ivan Maidanski <ivmai@mail.ru>

	* mallocx.c (GC_generic_malloc_many, GC_malloc_many): Define even
	if THREADS is undefined.
	* include/gc.h (GC_malloc_many): Update the comment.

2010-02-03  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: Fix some typos.

2010-01-29  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.in: Regenerate (by autoreconf -vif using
	libtool-2.2.6b, automake-1.11.1, autoconf-2.65).
	* aclocal.m4: Ditto.
	* compile: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* ltmain.sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.

2010-01-15  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_cpp.h (GC_PLACEMENT_DELETE): Define for Embarcadero
	(formerly known as Borland) C++ compiler v6.21+.
	* include/gc_cpp.h (GC_NO_OPERATOR_NEW_ARRAY): Define for ancient
	VC++ compilers.

2009-12-18  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (GC_register_my_thread_inner,
	GC_pthread_start_inner): Undo the previous commit changes for
	the thread flags and DETACHED state (since the state is only
	tested in GC_thread_exit_proc).

2009-12-18  Ivan Maidanski <ivmai@mail.ru> (with input from
	                                    Jean-Claude Beaudoin)

	* include/gc.h (GC_unregister_my_thread): Fix a typo; update the
	comment.
	* pthread_support.c (GC_delete_thread): Allow to delete the main
	thread (don't call GC_INTERNAL_FREE for it); update the comment.
	* win32_threads.c (GC_delete_thread): Ditto.
	* pthread_support.c (GC_unregister_my_thread): Add an assertion
	for FINISHED flag is unset.
	* tests/test.c (check_heap_stats): Test the main thread
	unregistering (only if THREADS).
	* win32_threads.c (GC_register_my_thread_inner): Set flags to
	DETACHED (only if GC_PTHREADS).
	* win32_threads.c (GC_unregister_my_thread): Add FIXME (for
	GC_wait_for_gc_completion).
	* win32_threads.c (GC_pthread_start_inner): Clear flags detached